--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -248,7 +248,8 @@ footer {
 .locker-room-sub-text {
     display: block;
     line-height: 1.4;
-    font-size: 1rem;
+    font-size: 1rem !important;
+    padding-top: 3%;
 }
 
 .locker-section {
@@ -270,11 +271,11 @@ footer {
 .tag-image {
     position: absolute;
     top: -100px;
-    width: 350px !important;
-    max-width: 350px !important;
+    width: 350px ;
+    max-width: 350px ;
     margin: 0 auto 0px auto;
     height: auto;
-    z-index: 0 !important;
+    z-index: 0 ;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -316,7 +317,7 @@ footer {
 
 .frame-paragraph {
     color: var(--text-color);
-    font-size: 1rem;
+    font-size: 0.9rem !important;
     margin-bottom: 25px;
     line-height: 1.5;
 }
@@ -634,9 +635,14 @@ footer {
     .locker-room-sub-text {
         display: block !important;
         line-height: 0.9 !important;
+        font-size: 0.8rem !important;
         font-size: var(--p-mobile) !important;
         text-align: center !important;
         margin-bottom: 0.2rem !important;
+    }
+
+    .locker-heading {
+      font-size: 1.4rem !important;
     }
 
     #intro .right-column {
